--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/fiber": "^8.17.12",
     "@types/three": "^0.172.0",
+    "motion": "^12.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
